<resources>
    <string name="app_name">AEC</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut" translatable="false">Cut</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer" translatable="false">Drawer Open</string>
    <string name="close_drawer" translatable="false">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_delete">DELETE</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="feed" translatable="false">My Feed</string>

    <!--Alert Dialog-->

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy" translatable="false">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_username">Please provide a non empty username.</string>
    <string name="empty_first_name">Please provide a non empty first name.</string>
    <string name="empty_last_name">Please provide a non empty last name.</string>
    <string name="empty_age">Please provide a non empty age.</string>
    <string name="empty_phone_number">Please provide a non empty phone number.</string>
    <string name="empty_confirmation">Please provide a non empty password.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--Forgot Password-->
    <string name="empty_email">Please provide a non empty email.</string>

    <!--about fragment-->
    <string name="project_info" translatable="false">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog" translatable="false">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo" translatable="false">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog" translatable="false">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo" translatable="false">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us" translatable="false">Rate Us</string>
    <string name="rating_message" translatable="false">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1" translatable="false">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2" translatable="false">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text" translatable="false">Rate us on Play Store</string>
    <string name="rating_not_provided_error" translatable="false">Please provide us stars.</string>
    <string name="rating_thanks" translatable="false">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link" translatable="false">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link" translatable="false">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title" translatable="false">My Feed</string>
    <string name="open_source" translatable="false">Open Source</string>
    <string name="blog" translatable="false">Blog</string>

    <!--empty state-->
    <string name="empty_screen" translatable="false">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_students">Students</string>
    <string name="nav_courses">Courses</string>
    <string name="no_category_items" >No category item found.</string>
    <string name="no_student_items" >No student item found. \n Import or Add a new student.</string>
    <string name="no_exam_items" >No exam item found.\nCreate one by using the yellow button.</string>
    <string name="student_save">SAVE</string>
    <string name="student_add">ADD</string>
    <string name="search_hint">Search</string>

    <string-array name="exam_type">
        <item>- Select Exam Type -</item>
        <item>Quiz</item>
        <item>Mid Exam</item>
        <item>Final Exam</item>
    </string-array>

    <string-array name="exam_exam_marking_type">
        <item>- Select Marking Type -</item>
        <item>Human Marked(OMR)</item>
        <item>Character(Human Hand Written)</item>
    </string-array>

    <string-array name="exam_course_type">
        <item>- Select Exam Course -</item>
        <item>Software Engineering I</item>
        <item>Software Engineering II</item>
        <item>Introduction to Programming</item>
        <item>Fundamentals of IT</item>
        <item>Fundamentals of Networking</item>
        <item>Operating System</item>
        <item>System Programming</item>
        <item>Advanced Mobile Programming</item>
        <item>Advanced IT Security</item>
    </string-array>

    <string name="exam_course_type_item">- Select Exam Course -</string>

    <string name="error_invalid_credential">Invalid credential! try again.</string>
    <string name="error_file_does_not_exist">File does not exist.</string>
    <string name="error_server_error">Internal Server Error.</string>
    <string name="error_server_unreachable">Service Unavailable.</string>
    <string name="error_something_wrong_happened">Something wrong happened. Please try again later.</string>
    <string name="no_exam_list_found">No exam list found.</string>
    <string name="delete_dialog_student">Are you sure you want to delete this student?</string>
    <string name="are_you_sure_delete_dialog_student">Are you ssure you want to delete all students from the list?</string>
    <string name="btn_dialog_add">ADD</string>
    <string name="add_new_student">Add New Student</string>
    <string name="exams_created_successfully">Created Exams Successfully.</string>

    <string name="account_settings">Account settings</string>
    <string name="available_language">Available languages</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="microphone">Microphone</string>
    <string name="storage">Storage</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="amharic">Amharic</string>
    <string name="search">Search</string>
    <string name="impt">import</string>
    <string name="clear_all">Clear All</string>
    <string name="update_result">Update Result</string>
    <string name="chart_report">Chart Report</string>
    <string name="password_reset_request_sent_to_registrar">Password reset request sent to registrar.</string>
    <string name="choice_e">E</string>
    <string name="choice_d">D  </string>
    <string name="choice_c">C </string>
    <string name="choice_b">B </string>
    <string name="choice_a">A </string>
    <string name="question_answer">Question Answer</string>


    <string name="application_going_to_restart">Application need to restart before taking an effect. \nRestart now?</string>
    <string name="btn_restart">RESTART</string>
    <string name="btn_later">LATER</string>
    <string name="students_list">Student\'s List</string>
    <string name="create_exam">Create Exam</string>
    <string name="exam_date">Exam date</string>
    <string name="exam_weight">Exam weight</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="exam_description">Exam Description</string>
    <string name="add_answer">Add Answer</string>
</resources>
