<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_students" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_category"
            android:title="@string/nav_courses" />

    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/ic_power_settings_new_24px"
            android:title="@string/logout" />
    </group>
</menu>