<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".ui.create.CreateExamActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/import_toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subtitleTextColor="@color/white"
            app:title="@string/students_list"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/flContent"
        android:background="@color/material_grey_100"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/import_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="70dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_student" />

        <TextView
            android:id="@+id/tv_no_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/no_student_items"
            android:textAlignment="center"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="0.1"
                android:background="@drawable/bg_btn_curved_accent_color"
                android:text="@string/student_add"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_import"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="0.1"
                android:background="@drawable/bg_btn_curved_accent_color"
                android:text="@string/student_save"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>